tests/solidity-semantic-tests/out/errors/via_import/C.clear.teal
#pragma version 10
#pragma typetrack false

// /tmp/multisource_26z_n7fa/s3.sol.C.clear_state_program() -> uint64:
main:
    pushint 1
    return
